--- a/views/index.jade
+++ b/views/index.jade
@@ -17,7 +17,7 @@ block head
         templateStatus(true);
         var i = 0;
         $.each(result, function(key, value) {
-          populateTemplate(value.id, value.name, value.author, value.version, value.license,value.image, i%3);
+          populateTemplate(value.id, value.name, value.author, value.version, value.license, value.image, value.largeImage, i%3);
           i = i + 1;
         });
 
@@ -47,7 +47,7 @@ block head
         sockjs.send(data);
       });
 
-      function populateTemplate(id, name, author, version, license, image, separator) {
+      function populateTemplate(id, name, author, version, license, image, largeImage, separator) {
         if (separator === 0) {
           var separatorContent = $('.row-fluid.show-grid#separator-thumbnail').clone().insertBefore($('.pagination.pagination-centered')).end();
           //in order to clone our template we need to remove its id everytime
@@ -64,7 +64,7 @@ block head
           modalContent.attr('id', 'modalId_' + id);
 
           var modalBody = modalContent.children('.modal-body');
-          modalBody.children('#modalImageId_').attr('src', image);
+          modalBody.children('#modalImageId_').attr('src', largeImage);
           modalBody.children('#modalNameId_').text(name);
           modalBody.children('#modalAuthorId_').text('Author: ' + author);
           modalBody.children('#modalVersionId_').text('Version: ' + version);
@@ -82,7 +82,7 @@ block head
           modalContent.attr('id', 'modalId_' + id);
 
           var modalBody = modalContent.children('.modal-body');
-          modalBody.children('#modalImageId_').attr('src', image);
+          modalBody.children('#modalImageId_').attr('src', largeImage);
           modalBody.children('#modalNameId_').text(name);
           modalBody.children('#modalAuthorId_').text('Author: ' + author);
           modalBody.children('#modalVersionId_').text('Version: ' + version);
@@ -188,10 +188,10 @@ block body
         .row-fluid.show-grid(id='separator-thumbnail')
             ul.thumbnails
               li.span4(id='thumbnail-template')
-                .thumbnail(data-toggle='modal')
+                .thumbnail(data-toggle='modal', align='center')
                   p Name
                   img
-                .modal.hide.fade(id='modalId_', tabindex=-1, role='dialog')
+                .modal.hide.fade(id='modalId_', tabindex=-1, role='dialog', align='center')
                   .modal-header
                     h3 header
                   .modal-body
