Add affix support for navigator and for the category assets

--- a/views/index.jade
+++ b/views/index.jade
@@ -210,7 +210,7 @@ block body
         include navigator
     .row-fluid
       .span2
-        ul.nav.nav-tabs.nav-pills.nav-stacked
+        ul.nav.nav-tabs.nav-pills.nav-stacked.affix
           for category in categories
             li.dropdown
               a.dropdown-toggle(data-toggle='dropdown', href='#', id='#{category.id}', assetcount='#{category.pages}')
