--- a/views/navigator.jade
+++ b/views/navigator.jade
@@ -1,13 +1,21 @@
-.navbar.navbar-inverse
+style
+  body {
+    padding: 40px;
+  }
+//based on the twitter documentation we must change the padding
+//of your body. Otherwise our navigator will hide some elements from the page
+//http://twitter.github.com/bootstrap/javascript.html#affix
+
+.navbar.navbar-inverse.navbar-fixed-top(id='navigator')
   .navbar-inner
     ul.nav.pull-right
       li
-        a.btn.btn-inverse(href='index')
+        a.btn.btn-inverse(href='/index')
           i.icon-home.icon-white
-          | User
+          | Home
       li.divider-vertical
       li
-        a.btn.btn-inverse(href='account')
+        a.btn.btn-inverse(href='/account')
           i.icon-user.icon-white
           | User
 
