--- a/views/accountmodify.jade
+++ b/views/accountmodify.jade
@@ -21,38 +21,41 @@ block body
             return false;
        }
       }
+    include navigator
+    .row
+      .span9
+      .span6
+        form.form-horizontal.well(method='POST', id='modifyAccount')
+          fieldset.control-group(id='field-control')
+            .control-group
+              label.control-label(for='firstname') Name
+              .controls
+                input.xlarge(type='text', value='#{firstname}', name='firstname')
+            .control-group
+              label.control-label(for='lastname') Last name
+              .controls
+                input.xlarge(type='text', value='#{lastname}', name='lastname')
+            .control-group
+              label.control-label(for='email') Email
+              .controls
+                input.xlarge(type='text',  value='#{email}', name='email')
+            .control-group
+            .controls
+              input.btn-primary(type='submit',id='updateAccount', value='Update Account')
 
-    form.form-horizontal.well(method='POST', id='modifyAccount')
-      fieldset.control-group(id='field-control')
-        .control-group
-          label.control-label(for='firstname') Name
-          .controls
-            input.xlarge(type='text', value='#{firstname}', name='firstname')
-        .control-group
-          label.control-label(for='lastname') Last name
-          .controls
-            input.xlarge(type='text', value='#{lastname}', name='lastname')
-        .control-group
-          label.control-label(for='email') Email
-          .controls
-            input.xlarge(type='text',  value='#{email}', name='email')
-        .control-group
-        .controls
-          input.btn-primary(type='submit',id='updateAccount', value='Update Account')
-
-    form.form-horizontal.well(method='POST', id='modifyPassword', onsubmit='return validateForm();')
-      fieldset.control-group(id='field-control2')
-        span.help-control(id='help-password')
-        .control-group
-          label.control-label(for='password') New Password
-          .controls
-            input.xlarge(type='password', placeholder='Type your new password', name='password', id='password')
-        .control-group
-          label.control-label(for='password2') Confirm Password
-          .controls
-            input.xlarge(type='password', placeholder='Retype your password', name='password2', id='password2')
-        .control-group
-        .controls
-          input.btn-primary(type='submit',id='updatePassword', value='Update Password')
+        form.form-horizontal.well(method='POST', id='modifyPassword', onsubmit='return validateForm();')
+          fieldset.control-group(id='field-control2')
+            span.help-control(id='help-password')
+            .control-group
+              label.control-label(for='password') New Password
+              .controls
+                input.xlarge(type='password', placeholder='Type your new password', name='password', id='password')
+            .control-group
+              label.control-label(for='password2') Confirm Password
+              .controls
+                input.xlarge(type='password', placeholder='Retype your password', name='password2', id='password2')
+            .control-group
+            .controls
+              input.btn-primary(type='submit',id='updatePassword', value='Update Password')
 
 
