--- a/views/resetpassword.jade
+++ b/views/resetpassword.jade
@@ -4,9 +4,12 @@ block head
 block body
   .title
     h1(align="center") Reset your own #{network} Account Password
-    form.well(method='POST', id='login', onsubmit='return validateForm();')
-      fieldset.control-group(id='field-control')
-        .input
-          input.xlarge(type='text', placeholder='Type your email', name='email', required)
-        .action
-          input.btn-primary(type='submit',id='resetPasswordButton', value='Reset my password')
+    .row
+      .span9
+      .span6
+        form.well(method='POST', id='login', onsubmit='return validateForm();')
+          fieldset.control-group(id='field-control')
+            .input
+              input.xlarge(type='text', placeholder='Type your email', name='email', required)
+            .action
+              input.btn-primary(type='submit',id='resetPasswordButton', value='Reset my password')
