--- a/views/register.jade
+++ b/views/register.jade
@@ -8,14 +8,14 @@ block body
       function validateForm() {
         var validEmail = /^[A-z]+([A-z0-9]+[\.\_]?[A-z0-9]+)*@[A-z0-9]{2,}(\.[A-z0-9]{2,}){1,3}[A-z]$/;
 
-        if ($('#password1').val() !== $('#password2').val()) {
-            $('#password1').attr('placeholder', 'Your passwords does not match.');
+        if ($('#password').val() !== $('#password2').val()) {
+            $('#password').attr('placeholder', 'Your passwords does not match.');
             $('#password2').attr('placeholder', 'Your passwords does not match.');
             $('#field-control').addClass('error');
             $('#help-password').text('Your passwords does not match');
             return false;
-        } else if ($('#password1').val().length < 8 || $('#password2').val() < 8 ) {
-            $('#password1').attr('placeholder', 'Your password must be at least 8 digits.');
+        } else if ($('#password').val().length < 8 || $('#password2').val() < 8 ) {
+            $('#password').attr('placeholder', 'Your password must be at least 8 digits.');
             $('#password2').attr('placeholder', 'Your password must be at least 8 digits.');
             $('#field-control').addClass('error');
             $('#help-password').text('Your password must be at least 8 digits');
@@ -41,7 +41,7 @@ block body
             .input
               input.xlarge(type='text', placeholder='Enter your Email Adress', name='email', id='email', required)
             .input
-              input.xlarge(type='password', placeholder='Enter your Password', name='password1', id='password1' , required)
+              input.xlarge(type='password', placeholder='Enter your Password', name='password', id='password' , required)
             .input
               input.xlarge(type='password', placeholder='Retype your Password', name='password2', id='password2' , required)
             .action
