Make the forms which are in the center of the screen, able to be printed, on the center of screen on small screen resolutions

--- a/views/accountmodify.jade
+++ b/views/accountmodify.jade
@@ -22,9 +22,8 @@ block body
        }
       }
     include navigator
-    .row
-      .span9
-      .span6
+    .container
+      .span6.offset3
         form.form-horizontal.well(method='POST', id='modifyAccount')
           fieldset.control-group(id='field-control')
             .control-group
