--- a/views/home.jade
+++ b/views/home.jade
@@ -4,9 +4,8 @@ block head
 block body
   .title
     h1(align="center") Login with your #{network} Account
-    .row
-      .span9
-      .span6
+    .container
+      .span6.offset3
         .hero-unit(align='center')
           p
             a.btn.btn-primary(href='login') I already have an account
