--- a/views/resetpassword.jade
+++ b/views/resetpassword.jade
@@ -4,9 +4,8 @@ block head
 block body
   .title
     h1(align="center") Reset your own #{network} Account Password
-    .row
-      .span9
-      .span6
+    .container
+      .span6.offset3
         form.well(method='POST', id='login', onsubmit='return validateForm();')
           fieldset.control-group(id='field-control')
             .input
