--- a/views/pointsbuy.jade
+++ b/views/pointsbuy.jade
@@ -23,9 +23,8 @@ block body
         }
       }
     include navigator
-    .row
-      .span9
-      .span6
+    .container
+      .span6.offset3
         form.well.form-horizontal(method='POST', id='login', align='center', onsubmit='return validateForm();')
           fieldset.control-group(id='field-control')
             span.help-block(id='help-field')
