--- a/views/register.jade
+++ b/views/register.jade
@@ -1,26 +1,30 @@
 extends layout
 block head
   title Create your own #{network} Account
+  include ../node_modules/validator/validator.js
 block body
   .title
     h1(align="center") Create your own #{network} Account
     script
       function validateForm() {
-        var validEmail = /^[A-z]+([A-z0-9]+[\.\_]?[A-z0-9]+)*@[A-z0-9]{2,}(\.[A-z0-9]{2,}){1,3}[A-z]$/;
-
         if ($('#password').val() !== $('#password2').val()) {
             $('#password').attr('placeholder', 'Your passwords does not match.');
             $('#password2').attr('placeholder', 'Your passwords does not match.');
             $('#field-control').addClass('error');
             $('#help-password').text('Your passwords does not match');
             return false;
-        } else if ($('#password').val().length < 8 || $('#password2').val() < 8 ) {
+        }
+
+        if ($('#password').val().length < 8 || $('#password2').val() < 8 ) {
             $('#password').attr('placeholder', 'Your password must be at least 8 digits.');
             $('#password2').attr('placeholder', 'Your password must be at least 8 digits.');
             $('#field-control').addClass('error');
             $('#help-password').text('Your password must be at least 8 digits');
             return false;
-        } else if (!validEmail.test($('#email').val())) {
+        }
+
+        try (check(#email).isEmail()) {
+        } catch (e) {
             $('#email').attr('placeholder', 'Your email address is not valid.');
             $('#field-control').addClass('error');
             $('#help-email').text('Your Email Address is not valid');
