--- a/views/registerconfirm.jade
+++ b/views/registerconfirm.jade
@@ -4,5 +4,10 @@ block head
 block body
     .page-header
       h1(align="center") Bodega #{network} Addon Store
-      .alert.alert-success.information
-        | A verification code has been send to your email account
+      if (success === true)
+        .alert.alert-success.information
+          | A verification code has been send to your email account
+      else
+        .alert.alert-error
+          | #{message}
+
