Add logout button to navigator

--- a/views/navigator.jade
+++ b/views/navigator.jade
@@ -18,4 +18,9 @@ style
         a.btn.btn-inverse(href='/account')
           i.icon-user.icon-white
           | User
+      li.divider-vertical
+      li
+        a.btn.btn-inverse(href='/logout')
+          i.icon-off.icon-white
+          | Logout
 
