--- a/views/pointsbuyconfirm.jade
+++ b/views/pointsbuyconfirm.jade
@@ -7,7 +7,7 @@ block body
       include navigator
       if (success === true)
         .alert.alert-success
-          | #{message}
+          | You have successfuly bought your points
       else
         .alert.alert-error
           | #{message}
